# verdicto

./: .env.example  .gitignore  .mimo-context.md  ARCHITECTURE.md  BORROW_IMPLEMENTATION_PLAN.md  CLAUDE.md  E2E_TEST_REPORT.md  LANDING_PAGE_CONTENT.md  NEUMORPHISM_TASKS.md  PROJECT_DESCRIPTION.md  PROJECT_REPORT.md  README.md  REDESIGN_TASKS.md  VALIDATOR_PROMPT.md  VIDEO_SCRIPT.md  changes.diff  changes.patch  inventory.json  package-lock.json  package.json  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml
agents/: package-lock.json  package.json  test-commitment.mjs  test-e2e.ts  test-mcp.js  test-mcp.ts  test-sdk.mjs  test-sdk.ts  test-sdk2.mjs  test-sdk3.mjs  test-stateless.ts  test-streamable.ts  tsconfig.json  vitest.config.ts  websocket-server.ts
agents/data/: transactions.json
agents/evidence-analyst/: server.ts
contracts/: Cargo.toml  EscrowContract_broadcast.json  EscrowContract_deploy.json  EscrowContract_result.json  Odra.toml  ReputationRegistry_broadcast.json  ReputationRegistry_deploy.json  ReputationRegistry_result.json  VotingContract_broadcast.json  VotingContract_deploy.json  VotingContract_result.json  deploy.sh  poll_hashes.js  test_output.txt
contracts/.cargo/: config.toml
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
contracts/verdict-oracle/: Cargo.toml
contracts/verdict-oracle/src/: lib.rs
contracts/voting/: Cargo.toml
contracts/voting/src/: lib.rs
dashboard/: FIXES_COMPLETE.md  MOBILE_FIXES_SUMMARY.md  MOBILE_OPTIMIZATIONS.md  README.md  UI_ENHANCEMENTS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  screenshot.cjs  vite.config.ts
data/: transactions.json
(+156 files in other folders)
