[workspace]
members = [
    "reputation",
    "voting",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Verdict"]

[workspace.dependencies]
odra = { version = "2.8.1", default-features = false }
odra-test = { version = "2.8.1", default-features = false }
odra-build = { version = "2.8.1", default-features = false }
odra-cli = { version = "2.8.1", default-features = false }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
